--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photography website</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 
@@ -11,7 +12,7 @@
         <h1>my photography website</h1>
         </nav>
         <main>
-            <section class="gallery">
+            <section class="biography">
 
 
 
@@ -20,7 +21,7 @@
 
 
 
-                
+
             </section>
 
 
