--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         </nav>
         <main>
             <section class="biography">
+                <img src="/_ (6).jpeg" alt="photo 1">
+                <img src="/The Vampire Diaries.jpeg" alt="photo 2">
+                <img src="/‘Vampire Diaries’ Season 5 Poster_ Doppelganger Danger In Mystic Falls.jpeg" alt="photo 3">
 
 
 
