--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </nav>
       </div>
     </header>
-    <div class="container-banner"></div>
+    <div class="container-banner">
     <a href="images/Beach Loop (1).mp4"></a>
     <section>
 
